--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrap">
         <div class="header">
             <div class="container">
-                <div class="header__Content">
+                <div class="header__content">
                     <div class="header__info">
                         <div class="header__top">
                             <img class="header__top-img1" src="./img/icon1.svg" alt="">
@@ -22,6 +22,7 @@
                                 <img src="./img/icon3.svg" alt="">
                             </div>
                         </div>
+
                         <div class="header__top1">
                             <div class="header__top-img1">
                                 <img src="./img/header1.png" alt="">
@@ -44,6 +45,55 @@
                         <a class="header__main-title" href="#">Crockery</a>
                         <a class="header__main-title" href="#">Tableware</a>
                         <a class="header__main-title" href="#">Cutlery</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+        <div class="hero">
+            <div class="container">
+                <div class="hero__content">
+
+                    <div class="hero__info">
+                        <div class="hero__top">
+                            <div class="hero__head">
+                                <h1 class="hero__top-title">The furniture brand for the <br> future, with timeless
+                                    designs
+                                </h1>
+                                <button class="hero__btn">View collection</button>
+                                <p class="hero__text">A new era in eco friendly furniture with Avelon, the French luxury
+                                    retail brand <br>
+                                    with nice fonts, tasteful colors and a beautiful way to display things digitally
+                                    <br>
+
+                                    using modern web technologies.
+                                </p>
+                            </div>
+
+                        </div>
+
+                        <div class="hero__main">
+                            <img src="./img/hero.img.1.png" alt="" class="hero__main-img">
+                        </div>
+
+                    </div>
+
+
+                    <div class="hero__info1">
+                        <div class="hero__top1">
+                            <h1 class="hero__top-title1">The furniture brand <br> for the future, with <br>timeless
+                                designs</h1>
+
+                            <p class="hero__top-text1">A new era in eco friendly furniture with <br> Avelon, the French
+                                luxury retail brand <br>
+                                with nice fonts, tasteful colors and a <br> beautiful way to display things digitally
+                                <br>
+                                using modern web technologies.
+                            </p>
+                            <button class="hero__top-btn1">View collection</button>
+                        </div>
                     </div>
 
                 </div>
