--- a/index.html
+++ b/index.html
@@ -99,6 +99,56 @@
                 </div>
             </div>
         </div>
+
+
+
+        <section class="cards">
+            <div class="container">
+                <div class="cards__content">
+                    <div class="cards__info">
+                        <h1 class="cards__theme">What makes our brand different</h1>
+                        <div class="cards__top">
+                            <ul class="cards__list">
+
+                                <li class="cards__item">
+                                    <img src="./img/cards1.svg" alt=""> <br>
+                                    <br>
+                                    <b class="cards__title">Next day as standard</b>
+                                    <p class="cards__text">Order before 3pm and get your order
+                                        the next day as standard</p>
+                                </li>
+
+                                <li class="cards__item">
+                                    <img src="./img/cards2.svg" alt=""> <br>
+                                    <br>
+                                    <b class="cards__title">Made by true artisans</b>
+                                    <p class="cards__text">Handmade crafted goods made with
+                                        real passion and craftmanship</p>
+                                </li>
+
+                                <li class="cards__item">
+                                    <img src="./img/cards3.svg" alt=""> <br>
+                                    <br>
+                                    <b class="cards__title">Unbeatable prices</b>
+                                    <p class="cards__text">For our materials and quality you wont find better prices
+                                        anywhere</p>
+                                </li>
+
+                                <li class="cards__item">
+                                    <img src="./img/cards4.svg" alt=""> <br>
+                                    <br>
+                                    <b class="cards__title">Recycled packaging</b>
+                                    <p class="cards__text">We use 100% recycled packaging to ensure our footprint is
+                                        manageable</p>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
 
 </body>
